# token-cost-printer

./: README.md  pyproject.toml  test_codex_receipt.py
docs/: README.md  configuration.md  data-model.md  events.md  operations.md  receipts.md
scripts/: print-demo-receipt.py
skills/codex-receipt-pr/: SKILL.md
skills/codex-receipt-pr/agents/: openai.yaml
skills/token-receipt-pr/: SKILL.md
skills/token-receipt-pr/agents/: openai.yaml
src/codex_receipt/: __init__.py  formatter.py  quotes.jsonl
token-receipt/: pyproject.toml  test_codex_receipt.py  test_token_receipt.py
token-receipt/scripts/: print-demo-receipt.py
token-receipt/src/codex_receipt/: __init__.py
token-receipt/src/codex_receipt/formatter/: __init__.py
token-receipt/src/token_receipt/: __init__.py  codex.py  models.py
token-receipt/src/token_receipt/formatter/: _core.py
token-receipt/src/token_receipt/mock/: __init__.py
