[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "token-cost-printer"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
codex-receipt = "codex_receipt:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_receipt = ["quotes.jsonl"]
